@@ -13,6 +13,7 @@
 	* _gptrgetc.c: fix return values
 	* _gptrput.c: fix return values
 	* _mulint.c: fix return values
+	* as/z80/Makefile: fix 'make -j' problem
 
 2003-04-02  Bernhard Held <bernhard@bernhardheld.de>
 
